src/objects/SFDC_FollowOnQuestion__c.object
<CustomObject>
    <description>Junction object representing a list of follow on questions to ask for a given answer.</description>
    <fields>
        <fullName>Answer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The answer ID field in the junction object.</description>
        <label>Answer</label>
        <referenceTo>SFDC_Answer__c</referenceTo>
        <relationshipLabel>Follow On Questions</relationshipLabel>
        <relationshipName>R00N20000000oz9CEAQ</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Help__c</fullName>
        <description>Link to Help page for Scripts</description>
        <formula>(HYPERLINK(&quot;/servlet/servlet.FileDownload?file=015200000002o5K&quot;, &quot;Help for Scripts&quot;)) &amp; &quot; &quot; &amp; (IMAGE(&quot;/img/btn_help.gif&quot;, &quot;Help&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Help for Scripts</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QuestionOrder__c</fullName>
        <description>Position of the question in the order</description>
        <label>QuestionOrder</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Question__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The question field on the junction object.</description>
        <label>Question</label>
        <referenceTo>SFDC_Questions__c</referenceTo>
        <relationshipLabel>Follow On Questions</relationshipLabel>
        <relationshipName>R00N20000000oz9BEAQ</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Script__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Related Script</description>
        <label>Script</label>
        <referenceTo>SFDC_Script__c</referenceTo>
        <relationshipLabel>Questions</relationshipLabel>
        <relationshipName>R00N20000000oz9AEAQ</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>FollowOnQuestion</label>
    <nameField>
        <displayFormat>FO-{000000}</displayFormat>
        <label>Follow On Question ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>FollowOnQuestions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>